--- a/Assignment0/asg0.html
+++ b/Assignment0/asg0.html
@@ -27,11 +27,9 @@
     <input type="text" id="v2y" name="v2y" size="10" />
   
 
+    
     <br><br>
-    <input type="button" value="Draw" onclick="handleDrawEvent()"></input>
-
-    <br><br>
-    <label for="pet-select">Operation:</label>
+    <label for="operation-select">Operation:</label>
 
     <select name="operator" id="operation-select">
       <option value="Add">Add</option>
@@ -40,6 +38,8 @@
       <option value="Divide">Divide</option>
     </select>
 
+    <br><br>
+    <input type="button" value="Draw" onclick="handleDrawEvent()"></input>
 
 
   </body>
