Added new stuff

--- a/Assignment0/asg0.html
+++ b/Assignment0/asg0.html
@@ -26,7 +26,8 @@
     <label for="y">y</label>
     <input type="text" id="v2y" name="v2y" size="10" />
   
-
+    <br><br>
+    <input type="button" value="Draw" onclick="handleDrawEvent()"></input>
     
     <br><br>
     <label for="operation-select">Operation:</label>
@@ -36,7 +37,13 @@
       <option value="Subtract">Subtract</option>
       <option value="Multiply">Multiply</option>
       <option value="Divide">Divide</option>
+      <option value="Magnitude">Magnitude</option>
+      <option value="Normalize">Normalize</option>
     </select>
+
+    <label for="Scalar">Scalar</label>
+    <input type="text" id="Scalar" name="Scalar" size="10" />
+
 
     <br><br>
     <input type="button" value="Draw" onclick="handleDrawEvent()"></input>
