Implemented angle between and area

--- a/Assignment0/asg0.html
+++ b/Assignment0/asg0.html
@@ -39,6 +39,8 @@
       <option value="Divide">Divide</option>
       <option value="Magnitude">Magnitude</option>
       <option value="Normalize">Normalize</option>
+      <option value="Angle Between">Angle Between</option>
+      <option value="Area">Area</option>
     </select>
 
     <label for="Scalar">Scalar</label>
