--- a/Assignment0/asg0.html
+++ b/Assignment0/asg0.html
@@ -13,17 +13,17 @@
     <script src="lib/cuon-matrix-cse160.js"></script>
 
     <br><br> <!--for v1-->
-    <label for="x">v1: x</label>
+    <label for="v1x">v1: x</label>
     <input type="text" id="v1x" name="v1x" size="10" />
     
-    <label for="y">y</label>
+    <label for="v1y">y</label>
     <input type="text" id="v1y" name="v1y" size="10" />
 
     <br><br> <!--for v2-->
-    <label for="x">v2: x</label>
+    <label for="v2x">v2: x</label>
     <input type="text" id="v2x" name="v2x" size="10" />
     
-    <label for="y">y</label>
+    <label for="v2y">y</label>
     <input type="text" id="v2y" name="v2y" size="10" />
   
     <br><br>
@@ -37,8 +37,10 @@
       <option value="Subtract">Subtract</option>
       <option value="Multiply">Multiply</option>
       <option value="Divide">Divide</option>
+
       <option value="Magnitude">Magnitude</option>
       <option value="Normalize">Normalize</option>
+
       <option value="Angle Between">Angle Between</option>
       <option value="Area">Area</option>
     </select>
