--- a/Asg0/src/asg0.html
+++ b/Asg0/src/asg0.html
@@ -10,7 +10,7 @@
       Please use a browser that supports "canvas"
     </canvas>
     <script src="asg0.js"></script>
-    <script src="lib/cuon-matrix-cse160.js"></script>
+    <script src="../lib/cuon-matrix-cse160.js"></script>
 
     <br><br> <!--for v1-->
     <label for="v1x">v1: x</label>
