--- a/Asg0/src/asg0.html
+++ b/Asg0/src/asg0.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Draw a blue rectangle (canvas version)</title>
+    <title>Draw vectors and perform linear algebra operations</title>
   </head>
 
   <body onload="main()">
