--- a/Asg0/src/asg0.html
+++ b/Asg0/src/asg0.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8" />
     <title>Draw vectors and perform linear algebra operations</title>
   </head>
-
+  <!--Made by Roman Rosales roarosal@ucsc.edu-->
+  <!--All comments for grader and description is on the ReadME file in /lib-->
   <body onload="main()">
     <canvas id="example" width="400" height="400">
       Please use a browser that supports "canvas"
