--- a/Asg1/src/ColoredPoints.html
+++ b/Asg1/src/ColoredPoints.html
@@ -9,10 +9,28 @@
     <canvas id="webgl" width="400" height="400">
     Please use a browser that supports "canvas"
     </canvas>
+    <p></p>
+
+    <p id="numdot"> Performance Stats</p>
+
+    <button type="button" id="green" >Green</button>
+    <button type="button" id="red" >Red</button>
+    <button type="button" id="clearButton" >Clear</button>
+
+    <p></p>
+    Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide">
+    <p></p>
+    Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide">
+    <p></p>
+    Blue <input type="range" min="0" max="100" value="100" class="slider" id="blueSlide">
+
+    <p></p>
+    Size <input type="range" min="5" max="40" value="0" class="slider" id="sizeSlide">
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
+    <script src="Point.js"></script>
     <script src="ColoredPoints.js"></script>
   </body>
 </html>
