--- a/Asg1/src/ColoredPoints.html
+++ b/Asg1/src/ColoredPoints.html
@@ -16,6 +16,10 @@
     <button type="button" id="green" >Green</button>
     <button type="button" id="red" >Red</button>
     <button type="button" id="clearButton" >Clear</button>
+    <p></p>
+    <button type="button" id="point" >Point</button>
+    <button type="button" id="triangle" >Triangle</button>
+    <button type="button" id="circle" >Circle</button>
 
     <p></p>
     Red <input type="range" min="0" max="100" value="100" class="slider" id="redSlide">
@@ -31,6 +35,8 @@
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
     <script src="Point.js"></script>
+    <script src="Triangle.js"></script>
+    <script src="Circle.js"></script>
     <script src="ColoredPoints.js"></script>
   </body>
 </html>
