--- a/Asg1/src/ColoredPoints.html
+++ b/Asg1/src/ColoredPoints.html
@@ -15,6 +15,7 @@
 
     <button type="button" id="green" >Green</button>
     <button type="button" id="red" >Red</button>
+    <button type="button" id="eraser" >Eraser</button>
     <button type="button" id="clearButton" >Clear</button>
     <p></p>
     <button type="button" id="point" >Point</button>
@@ -27,6 +28,8 @@
     Green <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide">
     <p></p>
     Blue <input type="range" min="0" max="100" value="100" class="slider" id="blueSlide">
+    <p></p>
+    Transparency <input type="range" min="0" max="100" value="100" class="slider" id="trSlide">
 
     <p></p>
     Size <input type="range" min="5" max="40" value="0" class="slider" id="sizeSlide">
