--- a/Asg1/src/ColoredPoints.html
+++ b/Asg1/src/ColoredPoints.html
@@ -36,7 +36,15 @@
     <button type="button" id="lTri" >Left</button>
     <button type="button" id="rTri" >Right</button>
     <button type="button" id="iTri" >Isoceles</button>
-    
+
+    <p></p>
+    I added the feature of buttons for different types of triangles and an eraser button.
+    <p></p>
+    I drew a Capybara in a forest with my program!
+    <p></p>
+    <img src="capybaradrawing.png" alt="capybaradrawing" width="200" height="200">
+    <img src="capybaradrawing2.png" alt="capybaradrawing2" width="300" height="200">
+    <img src="capypaper.JPG" alt="capypaper" width="275" height="200">
 
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
