--- a/Asg1/src/ColoredPoints.html
+++ b/Asg1/src/ColoredPoints.html
@@ -38,7 +38,7 @@
     <button type="button" id="iTri" >Isoceles</button>
 
     <p></p>
-    I added the feature of buttons for different types of triangles and an eraser button.
+    I added the feature of buttons for different types of triangles, transparency slider, and an eraser button.
     <p></p>
     I drew a Capybara in a forest with my program!
     <p></p>
