--- a/Asg2/src/BlockyAnimal.html
+++ b/Asg2/src/BlockyAnimal.html
@@ -13,20 +13,9 @@
 
     <p id="numdot"> Performance Stats</p>
 
-    <button type="button" id="green" >Green</button>
-    <button type="button" id="red" >Red</button>
-    <button type="button" id="eraser" >Eraser</button>
-    <button type="button" id="clearButton" >Clear</button>
     <p></p>
-    <button type="button" id="point" >Point</button>
-    <button type="button" id="triangle" >Triangle</button>
-    <button type="button" id="circle" >Circle</button>
-
-    <p></p>
-    Red: <input type="range" min="0" max="100" value="100" class="slider" id="redSlide">
-    Green: <input type="range" min="0" max="100" value="100" class="slider" id="greenSlide">
-    Blue: <input type="range" min="0" max="100" value="100" class="slider" id="blueSlide">
-    Camera Angle: <input type="range" min="0" max="90" value="5" class="slider" id="angleSlide">
+    Horizontal Camera Angle: <input type="range" min="-180" max="180" value="0" class="slider" id="angleSlideX">
+    Vertical Camera Angle: <input type="range" min="-180" max="180" value="0" class="slider" id="angleSlideY">
     <p></p>
     Yellow Slider: <input type="range" min="-45" max="45" value="0" class="slider" id="yellowSlide">
     Purple Slider: <input type="range" min="-45" max="45" value="0" class="slider" id="purpleSlide">
