new awawa updates

--- a/Asg2/src/BlockyAnimal.html
+++ b/Asg2/src/BlockyAnimal.html
@@ -17,18 +17,26 @@
     Horizontal Camera Angle: <input type="range" min="-180" max="180" value="0" class="slider" id="angleSlideX">
     Vertical Camera Angle: <input type="range" min="-180" max="180" value="0" class="slider" id="angleSlideY">
     <p></p>
-    Yellow Slider: <input type="range" min="-45" max="45" value="0" class="slider" id="yellowSlide">
-    Purple Slider: <input type="range" min="-45" max="45" value="0" class="slider" id="purpleSlide">
+    Head Slider: <input type="range" min="-45" max="45" value="0" class="slider" id="yellowSlide">
+    Awawa Slider: <input type="range" min="0" max="20" value="0" class="slider" id="purpleSlide">
 
     <p></p>
-    Yellow Animation:
+    Awawa Animation:
     <button type="button" id="animationButtonOn" >On</button>
     <button type="button" id="animationButtonOff" >Off</button>
 
-    Purple Animation:
+    Awawa Animation:
     <button type="button" id="aniPurpleON" >On</button>
     <button type="button" id="aniPurpleOFF" >Off</button>
 
+    Awawa Speed:<input type="range" min="5" max="20" value="5" class="slider" id="speedSlide">
+
+    <p></p>
+    This is a Hyrax, the idea is that you can make them do a Awawa animation as follows:
+    <p></p>
+    https://www.youtube.com/watch?v=g4ylwckvByk
+    <p></p>
+    On my animal the main joint is the head, first joint is the head, second joint is the jaw, and third joint is the tongue.
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
