--- a/Asg2/src/BlockyAnimal.html
+++ b/Asg2/src/BlockyAnimal.html
@@ -17,11 +17,11 @@
     Horizontal Camera Angle: <input type="range" min="-180" max="180" value="0" class="slider" id="angleSlideX">
     Vertical Camera Angle: <input type="range" min="-180" max="180" value="0" class="slider" id="angleSlideY">
     <p></p>
-    Head Slider: <input type="range" min="-45" max="45" value="0" class="slider" id="yellowSlide">
+    Head Slider: <input type="range" min="-15" max="15" value="0" class="slider" id="yellowSlide">
     Awawa Slider: <input type="range" min="0" max="20" value="0" class="slider" id="purpleSlide">
 
     <p></p>
-    Awawa Animation:
+    Head Animation:
     <button type="button" id="animationButtonOn" >On</button>
     <button type="button" id="animationButtonOff" >Off</button>
 
