added small details and stuff for final submission

--- a/Asg2/src/BlockyAnimal.html
+++ b/Asg2/src/BlockyAnimal.html
@@ -36,6 +36,10 @@
     <p></p>
     https://www.youtube.com/watch?v=g4ylwckvByk
     <p></p>
+    You can move around the Hyrax by left-click dragging, you will notice this Hyrax has a small pointy tail!
+    <p></p>
+    You can enable a special Awawa defense animation by shift+left-click where he jumps back and ears move!
+    <p></p>
     On my animal the main joint is the head, first joint is the head, second joint is the jaw, and third joint is the tongue.
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
@@ -45,6 +49,7 @@
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
     <script src="Cube.js"></script>
+    <script src="RightTriangle3D.js"></script>
     <script src="BlockyAnimal.js"></script>
   </body>
 </html>
