--- a/Asg2/src/BlockyAnimal.html
+++ b/Asg2/src/BlockyAnimal.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Create a drawing!</title>
+    <title>Hyrax Blocky Animal!</title>
   </head>
 
   <body onload="main()">
