--- a/Asg3/src/World.html
+++ b/Asg3/src/World.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hyrax Blocky Animal!</title>
+    <title>Blocky World Game</title>
   </head>
 
   <body onload="main()">
@@ -31,16 +31,6 @@
 
     Awawa Speed:<input type="range" min="5" max="20" value="5" class="slider" id="speedSlide">
 
-    <p></p>
-    This is a Hyrax, the idea is that you can make them do a Awawa animation as follows:
-    <p></p>
-    https://www.youtube.com/watch?v=g4ylwckvByk
-    <p></p>
-    You can move around the Hyrax by left-click dragging, you will notice this Hyrax has a small pointy tail!
-    <p></p>
-    You can enable a special Awawa defense animation by shift+left-click where he jumps back and ears move!
-    <p></p>
-    On my animal the main joint is the head, first joint is the head, second joint is the jaw, and third joint is the tongue.
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
     <script src="../lib/cuon-utils.js"></script>
@@ -50,6 +40,6 @@
     <script src="Circle.js"></script>
     <script src="Cube.js"></script>
     <script src="RightTriangle3D.js"></script>
-    <script src="BlockyAnimal.js"></script>
+    <script src="World.js"></script>
   </body>
 </html>
