--- a/Asg3/src/World.html
+++ b/Asg3/src/World.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Blocky World Game</title>
+    <title>Hyrax Land Game</title>
   </head>
 
   <body onload="main()">
