added some lighting features and fixed my funky walls

--- a/Asg4/src/World.html
+++ b/Asg4/src/World.html
@@ -12,12 +12,29 @@
     <p></p>
 
     <p id="numdot"> Performance Stats</p>
-    <p></p>
+    Normal Controls:
     <button type="button" id="normalOn" >Normal On</button>
     <button type="button" id="normalOff" >Normal Off</button>
+    Light Switch:
+    <button type="button" id="lightOn" >Light On</button>
+    <button type="button" id="lightOff" >Light Off</button>
+    <p></p>
+    Light Movement:
+    <button type="button" id="moveOn" >Move On</button>
+    <button type="button" id="moveOff" >Move Off</button>
+    Light X: <input type="range" min="-250" max="250" value="0" class="slider" id="lightSlideX">
+    Light Y: <input type="range" min="-250" max="250" value="100" class="slider" id="lightSlideY">
+    Light Z: <input type="range" min="-250" max="250" value="-200" class="slider" id="lightSlideZ">
+    <p></p>
+    Light Colors: 
+    Red: <input type="range" min="-255" max="255" value="255" class="slider" id="lightColorR">
+    Green: <input type="range" min="-255" max="255" value="255" class="slider" id="lightColorG">
+    Blue: <input type="range" min="-255" max="255" value="255" class="slider" id="lightColorB">
+
     <p></p>
     Horizontal Camera Angle: <input type="range" min="-60" max="60" value="0" class="slider" id="angleSlideX">
     Vertical Camera Angle: <input type="range" min="-10" max="60" value="0" class="slider" id="angleSlideY">
+    
     <p></p>
     Head Slider: <input type="range" min="-5" max="5" value="0" class="slider" id="yellowSlide">
     Awawa Slider: <input type="range" min="0" max="20" value="0" class="slider" id="purpleSlide">
