--- a/Asg4/src/World.html
+++ b/Asg4/src/World.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Hyrax Lab</title>
+    <title>Hyrax Laboratories</title>
   </head>
 
   <body onload="main()">
@@ -47,7 +47,9 @@
     <button type="button" id="aniPurpleON" >On</button>
     <button type="button" id="aniPurpleOFF" >Off</button>
     Awawa Speed:<input type="range" min="5" max="20" value="5" class="slider" id="speedSlide">
-   
+    
+    <p></p>
+    Welcome to Hyrax Laboratories! This experimental lab is testing a new flying light device.
     <p></p>
     <script src="../lib/webgl-utils.js"></script>
     <script src="../lib/webgl-debug.js"></script>
@@ -57,9 +59,12 @@
     <script src="Triangle.js"></script>
     <script src="Circle.js"></script>
     <script src="Cube.js"></script>
+    <script src="Model.js"></script>
     <script src="Sphere.js"></script>
     <script src="RightTriangle3D.js"></script>
-    <script src="World.js"></script>
+    <script src="OBJLoader.js"></script>
     <script src="Camera.js"></script>
+    <script src="World.js"></script>
+    
   </body>
 </html>
