--- a/Asg5/asg5/index.html
+++ b/Asg5/asg5/index.html
@@ -8,11 +8,17 @@
   <body>
     <header>
       <h1>Capybara Shack</h1>
+      <description>
+        This is a ThreeJS showcase game where you can explore a desert terrain with capybara's, an alpaca, funky shapes, and cool lighting!
+      </description>
       <div class = "controls">
         <header1>
         Animate Green Cylinder
-        <button type="button" id="animateOn" >Animation On</button>
-        <button type="button" id="animateOff" >Animation Off</button>
+        <button type="button" id="animateOn" >On</button>
+        <button type="button" id="animateOff" >Off</button>
+        Animate Ball
+        <button type="button" id="flaminateOn" >On</button>
+        <button type="button" id="flaminateOff" >Off</button>
         Light Helper:
         <button type="button" id="helperOn" >On</button>
         <button type="button" id="helperOff" >Off</button>
